--- a/pfc/anexo_mkpki.tex
+++ b/pfc/anexo_mkpki.tex
@@ -4,6 +4,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \chapter{Programa ``MakePkiPath.java''}
-\lstinputlisting[language=Java,caption={Programa \texttt{MakePkiPath.java}}]{../openssl-tlsx/pkipath/MakePkiPath.java}
+\lstinputlisting[language=Java,caption={Programa \texttt{MakePkiPath.java}}]{code/MakePkiPath.java}
 \label{chap:MkPkiPath}
 
