--- a/pfc/bibliografia.tex
+++ b/pfc/bibliografia.tex
@@ -3,6 +3,6 @@
 %% Copyright 2006 Eliézio Batista de Oliveira
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\bibliographystyle{bib/abnt-num}
+\bibliographystyle{abntex2-num}
 \bibliography{bib/biblio}
 
