--- a/pfc/anexo_tlsx.tex
+++ b/pfc/anexo_tlsx.tex
@@ -5,5 +5,5 @@
 
 \chapter{Header ``tlsx.h''}
 \lstinputlisting[language=C,numbers=left,basicstyle=\footnotesize\ttfamily,%
-				caption={\emph{Header} \texttt{tlsx.h}}]{code/tlsx.h}
+				caption={\emph{Header} \texttt{tlsx.h}}]{../code/tlsx.h}
 \label{chap:tlsx_h}
