Revert to old abntex package
since abntex2 is not yet available on Debian/Ubuntu

--- a/pfc/PFC.tex
+++ b/pfc/PFC.tex
@@ -211,7 +211,7 @@ como parte dos requisitos necessários para obtenção do grau de \pfcGrau.}
 \fi
 \usepackage{url}
 
-\usepackage[num,indent=1.7em]{abntex2cite}
+\usepackage[num,indent=1.7em]{abntcite}
 % Uso '[]' para as citações pois tem sido esse o padrão 'de facto' usado
 % nas dissertações.
 \citebrackets[]
